# mercyappbuilder

./: .gitignore  README.md  claude.md  package-lock.json  package.json  pyproject.toml  style.css
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  ErrorBoundary.tsx  PreviewPanel.tsx  SessionList.tsx  StatusPage.tsx  ViewPanel.tsx
frontend/src/contexts/: I18nContext.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: api.ts  i18n.ts
frontend/src/types/: index.ts
src/agent_backend/: __init__.py  agent.py  database.py  flow.py  main.py  models.py  permissions.py  preview.py  session.py  view.py
work-report/: index.html
